fix: card in grid box not overlappin

--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
 	margin: 1rem auto;
 	overflow: hidden;
 	display: grid;
-	grid-template-columns: repeat(3, minmax(20rem, 0.8fr));
+	grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
 	column-gap: 0.5rem;
 	row-gap: 1rem;
 }
 
 .cardStyle {
+	margin: auto;
 	width: 23rem;
 	height: 26rem;
 	border: 0.0625rem solid #00000029;
